[package]
name = "chess-server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.22"
uuid = { version = "1.17.0", features = ["v4"] }

[[bin]]
name = "chess-server"
path = "src/main.rs"

[lib]
name = "chess_server"
path = "src/lib.rs"
